--- a/03 - CSS/02 - PRACTICAS/vaccination/vaccination.css
+++ b/03 - CSS/02 - PRACTICAS/vaccination/vaccination.css
@@ -5,7 +5,7 @@
 
 .header{
     display: flex;
-    height: 90px;
+    height: 110px;
     width: 100%;
     background: whitesmoke;
     font-size: 20px;
@@ -39,7 +39,7 @@ ul{
 
 .boton{
     display: flex;
-    width: 170px;
+    width: 180px;
     height: 55px;
     background: rgba(75, 105, 243,80%);
     border-radius: 5%;
@@ -183,7 +183,7 @@ footer{
     width: 50%;
     height: 650px;
     /* only for demonstration, should be removed */
-    background: whitesmoke;
+    background: white;
     padding: 20px;
     text-align: center;
     font-size: x-large;
@@ -194,7 +194,7 @@ footer{
     display: block;
     width: 75%;
     color: rgb(0, 0, 116);
-    margin-left: 30px;
+    margin-left: 60px;
     text-align: left;
 }
 
@@ -220,4 +220,103 @@ footer{
 .loglist{
     height: 25px;
     margin-right: 20px;
+}
+
+.titulo5{
+    margin-top: 100px;
+    display: block;
+    width: 75%;
+    color: rgb(0, 0, 116);
+    margin-left: 60px;
+    text-align: left;
+}
+
+.listcuadrado{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    font-size: 15px;
+}
+.cace{
+    display: flex;
+    justify-content: center;
+}
+
+.logca{
+    margin-right: 20px;
+}
+
+.bocar{
+    display: flex;
+    margin-top: 20px;
+    margin-left: 20px;
+    width: 150px;
+    align-items: center;
+}
+
+.cartita{
+    margin-bottom: 30px;
+}
+
+.cb{
+    display: block;
+}
+
+.virus5 {
+    float: left;
+    margin-top: 150px;
+    width: 100%;
+    height: 350px;
+    /* only for demonstration, should be removed */
+    background: #eef3ff;
+    padding: 20px;
+    color: gray;
+    font-weight: bold;
+}
+
+.fi{
+    float: left;
+    margin-left: 90px;
+    margin-top: 3px;
+    width: 15%;
+}
+
+.fd{
+    display: flex;
+    margin-top: 50px;
+    justify-content: flex-end;
+}
+
+.column{
+    margin-right: 90px;
+}
+
+.ft{
+    color: blue;
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+
+.ff{
+    color: rgb(0, 0, 116);
+    margin-bottom: 30px;
+}
+
+.pie{
+    display: flex;
+    height: 35%;
+    align-items: flex-end;
+    margin-left: 90px;
+}
+.pi{
+    width: 40%;
+}
+.pd{
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    margin-right: 85px;
+}
+.pdi{
+    margin-left: 30px;
 }
