--- a/03 - CSS/02 - PRACTICAS/vaccination/vaccination.css
+++ b/03 - CSS/02 - PRACTICAS/vaccination/vaccination.css
@@ -320,3 +320,63 @@ footer{
 .pdi{
     margin-left: 30px;
 }
+
+.calendario {
+    position: absolute;
+    float: left;
+    width: 950px;
+    height: 200px;
+    /* only for demonstration, should be removed */
+    background: whitesmoke;
+    opacity: 90%;
+    padding: 5px;
+    margin-top: 50px;
+    border-radius: 1%;
+}
+
+.schedule{
+    display: flex;
+    align-items: center;
+}
+.schedule2{
+    display: flex;
+    align-items: center;
+    margin-left: 40px;
+}
+.location{
+    display: flex;
+    align-items: flex-start;
+}
+
+.lo{
+    height: 30px;
+    margin-right: 20px;
+    margin-left: 20px;
+    margin-top: 15px;
+}
+
+.tc2{
+    font-size: 30px;
+    font-weight: bold;
+    margin-right: 50px;
+    margin-top: 15px;
+}
+.to{
+    font-size: 20px;
+    font-weight: bold;
+    margin-right: 50px;
+    margin-top: 15px;
+    color: gray;
+}
+.lc{
+    height: 30px;
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
+.tc{
+    font-size: 20px;
+    font-weight: bold;
+    margin-right: 50px;
+    margin-top: 15px;
+}
